// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render components list layout 1`] = `
<div>
  <ReactComponent
    component={
      Object {
        "filepath": "components/foo.js",
        "name": "Foo",
        "pathLine": "components/foo.js",
        "props": Object {
          "description": "Foo foo",
        },
      }
    }
    depth={3}
    exampleMode="collapse"
    key="0"
    usageMode="collapse"
  />
  <ReactComponent
    component={
      Object {
        "filepath": "components/bar.js",
        "name": "Bar",
        "pathLine": "components/bar.js",
        "props": Object {
          "description": "Bar bar",
        },
      }
    }
    depth={3}
    exampleMode="collapse"
    key="1"
    usageMode="collapse"
  />
</div>
`;

exports[`should render components list 1`] = `
<ComponentsRenderer>
  <ReactComponent
    component={
      Object {
        "filepath": "components/foo.js",
        "name": "Foo",
        "pathLine": "components/foo.js",
        "props": Object {
          "description": "Foo foo",
        },
      }
    }
    depth={3}
    exampleMode="collapse"
    key="components/foo.js"
    usageMode="collapse"
  />
  <ReactComponent
    component={
      Object {
        "filepath": "components/bar.js",
        "name": "Bar",
        "pathLine": "components/bar.js",
        "props": Object {
          "description": "Bar bar",
        },
      }
    }
    depth={3}
    exampleMode="collapse"
    key="components/bar.js"
    usageMode="collapse"
  />
</ComponentsRenderer>
`;
